# Image

./: .gitattributes  .gitignore  .prettierignore  .taplo.toml  .yarnrc.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  electron.js  example.mjs  index.js  optimize-test.js  package-lock.json  package.json  replace-system-cl.js  rot90-irot.heic  rustfmt.toml  sharp.mjs  tsconfig.json  tsconfig.project.json  un-optimized-10bit.heic  un-optimized.heic  vitest.config.mts
.cargo/: config.toml
.claude/: settings.json
.claude/skills/: migrate-vite-cloudflare-to-void  void
.github/: publish.mjs
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature.yml
.github/workflows/: CI.yml  codspeed.yml  void-deploy.yml
__test__/: lossless.spec.mjs
bench/: bench.mjs  transform.bench.mjs
docs/: png-quantization-references-and-implementation.md
npm/android-arm-eabi/: package.json
npm/android-arm64/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
src/: lib.rs
website/: .gitignore  app.css  changelog.js  changelog.md  generate-img.js  mdx-components.js  next.config.js  nextra.config.js  og-image.js  package.json  playwright.config.ts  style.css  tsconfig.json  vite.config.ts  void.json
(+82 files in other folders)
